--- a/bus-mapping/Cargo.toml
+++ b/bus-mapping/Cargo.toml
@@ -12,7 +12,9 @@ mock = { path = "../mock", optional = true }
 
 ethers-core = "2.0.7"
 ethers-providers = "2.0.7"
-halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
+# halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
+halo2_proofs = { path="../../halo2-pse/halo2_proofs", features=["dev-graph", "circuit-params"]}
+# halo2_proofs = { path="../../halo2-axiom/halo2_proofs", features=["dev-graph", "circuit-params"]}
 itertools = "0.10"
 lazy_static = "1.4"
 log = "0.4.14"
