--- a/eth-types/Cargo.toml
+++ b/eth-types/Cargo.toml
@@ -11,7 +11,7 @@ ethers-signers = "2.0.7"
 hex = "0.4"
 lazy_static = "1.4"
 # halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
-halo2_proofs = { path = "../../halo2-pse/halo2_proofs" }
+halo2_proofs = { path = "../../halo2/halo2_proofs" }
 # halo2_proofs = { path = "../../halo2-axiom/halo2_proofs" }
 regex = "1.5.4"
 serde = {version = "1.0.130", features = ["derive"] }
