--- a/zkevm-circuits/Cargo.toml
+++ b/zkevm-circuits/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 # halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", features = ["circuit-params"], tag = "v2023_04_20" }
-halo2_proofs = { path="../../halo2-pse/halo2_proofs", features=["dev-graph", "circuit-params"]}
+halo2_proofs = { path="../../halo2/halo2_proofs", features=["dev-graph", "circuit-params"]}
 # halo2_proofs = { path="../../halo2-axiom/halo2_proofs", features=["dev-graph", "circuit-params"]}
 num = "0.4"
 sha3 = "0.10"
@@ -40,8 +40,8 @@ libsecp256k1 = "0.7"
 num-bigint = { version = "0.4" }
 rand_chacha = "0.3"
 # snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier", tag = "v2023_04_20", default-features = false, features = ["loader_halo2", "system_halo2", "loader_evm"] }
-# snark-verifier = { path = "../../snark-verifier/snark-verifier", default-features = false, features = ["loader_halo2", "system_halo2", "loader_evm"] }
-snark-verifier = { path = "../../snark-verifier-axiom/snark-verifier", default-features = false, features = ["loader_halo2", "halo2-pse", "loader_evm"] }
+# snark-verifier = { path = "../../snark-verifier-pse/snark-verifier", default-features = false, features = ["loader_halo2", "system_halo2", "loader_evm"] }
+snark-verifier = { path = "../../snark-verifier/snark-verifier", default-features = false, features = ["loader_halo2", "halo2-pse", "loader_evm"] }
 cli-table = { version = "0.4", optional = true }
 num_enum = "0.5.7"
 serde = { version = "1.0.130", features = ["derive"] }
